--- a/Serveur/Makefile
+++ b/Serveur/Makefile
@@ -2,7 +2,7 @@
 EXEC = awale
 
 CC = gcc
-CFLAGS = -Wall -g
+CFLAGS = -Wall
 
 SRC = plateau.c partie.c joueur.c server2.c 
 OBJ = $(SRC:.c=.o)
@@ -10,7 +10,7 @@ OBJ = $(SRC:.c=.o)
 $(EXEC): $(OBJ)
 	$(CC) $(CFLAGS) -o $(EXEC) $(OBJ)
 
-server2.o: server2.c client2.h server2.h plateau.h partie.h joueur.h 
+server2.o: server2.c server2.h client2.h  plateau.h partie.h joueur.h 
 	$(CC) $(CFLAGS) -c server2.c
 
 plateau.o: plateau.c plateau.h
